Java 8 friendliness, final one hopefully
The program now builds/runs (if you comment out "_Fox" classes)